--- a/ImGate/PC_APP/PC_APP.vcxproj
+++ b/ImGate/PC_APP/PC_APP.vcxproj
@@ -84,12 +84,24 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BluetoothLEAttributeDisplay.h" />
+    <ClInclude Include="BluetoothLEDeviceDisplay.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="App.h">
       <DependentUpon>App.xaml</DependentUpon>
     </ClInclude>
     <ClInclude Include="MainPage.h">
       <DependentUpon>MainPage.xaml</DependentUpon>
+    </ClInclude>
+    <ClInclude Include="PresentationFormats.h" />
+    <ClInclude Include="SampleConfiguration.h" />
+    <ClInclude Include="Scenario1_Discovery.h">
+      <DependentUpon>Scenario1_Discovery.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </ClInclude>
+    <ClInclude Include="Scenario2_Connect.h">
+      <DependentUpon>Scenario2_Connect.xaml</DependentUpon>
+      <SubType>Code</SubType>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -99,6 +111,13 @@
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Scenario1_Discovery.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario2_Connect.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Styles.xaml" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -115,6 +134,12 @@
     <Image Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BluetoothLEAttributeDisplay.cpp">
+      <DependentUpon>BluetoothLEAttributeDisplay.h</DependentUpon>
+    </ClCompile>
+    <ClCompile Include="BluetoothLEDeviceDisplay.cpp">
+      <DependentUpon>BluetoothLEDeviceDisplay.h</DependentUpon>
+    </ClCompile>
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
@@ -124,7 +149,20 @@
     <ClCompile Include="MainPage.cpp">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </ClCompile>
-    <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
+    <ClCompile Include="$(GeneratedFilesDir)module.g.cpp">
+      <DependentUpon>project.idl</DependentUpon>
+    </ClCompile>
+    <ClCompile Include="SampleConfiguration.cpp">
+      <DependentUpon>SampleConfiguration.h</DependentUpon>
+    </ClCompile>
+    <ClCompile Include="Scenario1_Discovery.cpp">
+      <DependentUpon>Scenario1_Discovery.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </ClCompile>
+    <ClCompile Include="Scenario2_Connect.cpp">
+      <DependentUpon>Scenario2_Connect.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Midl Include="App.idl">
@@ -133,6 +171,7 @@
     <Midl Include="MainPage.idl">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Midl>
+    <Midl Include="project.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
